--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/schedule">Lịch hẹn</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/auth/logout">Đăng xuất</a>
+                        </li>
                     </ul>
                 </div>
             </div>
