add more device

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -66,6 +66,13 @@
           <option value="DEVICE1">DEVICE1</option>
           <option value="DEVICE2">DEVICE2</option>
           <option value="DEVICE3">DEVICE3</option>
+            <option value="DEVICE1">DEVICE4</option>
+            <option value="DEVICE2">DEVICE5</option>
+            <option value="DEVICE3">DEVICE6</option>
+            <option value="DEVICE1">DEVICE7</option>
+            <option value="DEVICE2">DEVICE8</option>
+            <option value="DEVICE3">DEVICE9</option>
+            <option value="DEVICE1">DEVICE10</option>
         </select>
       </div>
 
